Bug 105272 - FILESAVE: Structured Reference Corrupted on XLSX round trip
Summary: FILESAVE: Structured Reference Corrupted on XLSX round trip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-01-12 04:57 UTC by Luke
Modified: 2020-04-12 12:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2017-01-12 04:57:02 UTC
Excel spreadsheets that use structured reference tables are now corrupted on round trip with a 'Err:507'. 

Steps to reproduce:
1. With a recent build of LibreOffice open attachment 114686 [details]
2. Save as XLSX
3. Open in Excel or Calc

The first sheet, Per Participant has a 'Err:507'  (#REF! in Excel). On the 'Data' sheet, the Total Medals column also has an 'Err:507'.

Fortunately, the relevant tinderbox builds had not yet faded into the ether( why is TDF so stingy here?), and I was able to quickly bibisect this regression to:

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=215cbfb460326010737433c2020638e9388a88a4..0ab8a27244e74e1c0916b3737f15c6c949aead78
Comment 1 Xisco Faulí 2017-01-12 08:50:46 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: 9a30cb2161506e003f14592d83075ab9d30516c1
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in 

Version: 5.3.0.0.beta2+
Build ID: 6238f71ddbdc766e733b1c808a4fa7d66f7bde87
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; Layout Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 JoNi 2017-01-12 14:46:28 UTC
thank you, could reproduce on master with your steps

regression of
https://cgit.freedesktop.org/libreoffice/core/commit/?id=f1dcb8b3e2e01848d44dd1beb82cd4e6e68a2acd
> replace hard-coded namespace URL strings with function calls...
>    Follow-up for https://gerrit.libreoffice.org/#/c/32425/
Comment 3 Luke 2017-01-13 01:20:31 UTC
I can confirm, reverting: 

https://cgit.freedesktop.org/libreoffice/core/commit/?id=f1dcb8b3e2e01848d44dd1beb82cd4e6e68a2acd

replace hard-coded namespace URL strings with function calls...


Resolves this issue.
Comment 4 Markus Mohrhard 2017-01-13 07:37:19 UTC
I will take care of it.
Comment 5 Rosemary Sebastian 2017-01-13 08:12:29 UTC
Ok. Just replace xls14Lst in sc/source/filter/excel/xedbdata.cxx with xls.
I made a mistake while replacing the strings.
Comment 6 Markus Mohrhard 2017-01-13 08:43:07 UTC
(In reply to auchi31 from comment #5)
> Ok. Just replace xls14Lst in sc/source/filter/excel/xedbdata.cxx with xls.
> I made a mistake while replacing the strings.

Ah. Perfect. Used your change and pushed it.
Comment 7 Commit Notification 2017-01-13 08:43:34 UTC
Rosemary Sebastian committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95cf7fa25d3b950e0cb576a1e864b54f1a43bc7a

tdf#105272: fix wrong namespace URL

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Luke 2017-01-15 06:33:39 UTC
Verified FIXED in Version: 5.4.0.0.alpha0+ (x64)
Build ID: efce216ca5d2b852c9fccc52ee68d1e27279d900

Thanks Rosemary!
Comment 9 Commit Notification 2020-04-12 12:36:23 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b0e1592bbbe5d25d65b834e7202b4e6cdee435a6

tdf#105272: Add unittest

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.