tdf#105272: fix wrong namespace URL

regression from f1dcb8b3e2e01848d44dd1beb82cd4e6e68a2acd

Change-Id: I088894711617bd762bf4e9352ddf6d850a5cbe7b